--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Covid 19 Cases</title>
+    <title>Covid 19 in Bangladesh</title>
     <link href="https://fonts.maateen.me/kalpurush/font.css" rel="stylesheet">
     <style>
         @font-face {
